[package]
name = "pprof"
version = "0.6.1"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2021"
license = "Apache-2.0"
description = "An internal perf tools for rust programs."
repository = "https://github.com/tikv/pprof-rs"
documentation = "https://docs.rs/pprof/"
readme = "README.md"

[features]
default = ["cpp"]
flamegraph = ["inferno"]
protobuf = ["prost", "prost-derive", "prost-build"]
cpp = ["symbolic-demangle/cpp"]

pyroscope = ["reqwest", "tokio"]
tls = ["reqwest/default-tls"]

[dependencies]
backtrace = "0.3"
lazy_static = "1.4"
libc = "^0.2.66"
log = "0.4"
nix = "0.23"
parking_lot = "0.11"
tempfile = "3.1"
thiserror = "1.0"
findshlibs = "0.10"
cfg-if = "1.0"
smallvec = "1.7"

inferno = { version = "0.10", default-features = false, features = ["nameattr"], optional = true }
prost = { version = "0.9", optional = true }
prost-derive = { version = "0.9", optional = true }
criterion = {version = "0.3", optional = true}
reqwest = {version = "0.11", optional = true, default-features = false}
tokio = {version = "1.13", optional = true, features = ["macros", "sync"]}

[dependencies.symbolic-demangle]
version = "8.0"
default-features = false
features = ["rust"]

[dev-dependencies]
criterion = "0.3"
rand = "0.8.0"

[build-dependencies]
prost-build = { version = "0.9", optional = true }

[[example]]
name = "flamegraph"
required-features = ["flamegraph"]

[[example]]
name = "profile_proto"
required-features = ["protobuf"]

[[example]]
name = "multithread_flamegraph"
required-features = ["flamegraph"]

[[example]]
name = "criterion"
required-features = ["flamegraph", "criterion"]

[[example]]
name = "pyroscope"
required-features = ["pyroscope", "pyroscope-tokio", "tokio/full", "criterion", "flamegraph"]

[[bench]]
name = "collector"
path = "benches/collector.rs"
harness = false

[package.metadata.docs.rs]
all-features = true
