[package]
name = "pprof-protobuf"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"

[features]
default = ["protobuf-codec"]
prost-codec = ["prost", "prost-derive", "protobuf-build/prost-codec"]
protobuf-codec = ["protobuf", "protobuf-build/protobuf-codec"]

[dependencies]
prost = { version = "0.6", optional = true }
prost-derive = { version = "0.6", optional = true }
protobuf = { version = "2.10", optional = true }

[build-dependencies]
protobuf-build = { version = "0.10.0", optional = true, default-features = false }